setting up blank javafx project

--- a/src/Screens/mainscreen.fxml
+++ b/src/Screens/mainscreen.fxml
@@ -7,14 +7,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller_MainScreen">
    <children>
       <MenuBar>
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem fx:id="File_NewTask" mnemonicParsing="false" text="New Task" />
+                  <MenuItem id="File_NewTask" fx:id="File_NewTask" mnemonicParsing="false" onAction="#NewTaskButtonPress" text="New Task" />
               <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
