--- a/src/Scenes/scene_main.fxml
+++ b/src/Scenes/scene_main.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -43,6 +45,11 @@
                   <Insets bottom="10.0" left="10.0" top="10.0" />
                </HBox.margin>
             </TextArea>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="NewTaskButton" layoutX="10.0" layoutY="325.0" mnemonicParsing="false" onAction="#NewTaskButtonPress" prefHeight="31.0" prefWidth="180.0" text="New Task" />
+               </children>
+            </AnchorPane>
          </children>
          <VBox.margin>
             <Insets />
