--- a/src/Scenes/scene_main.fxml
+++ b/src/Scenes/scene_main.fxml
@@ -3,59 +3,37 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller_MainScene">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller_MainScene">
    <children>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="225.0">
+      <VBox prefHeight="480.0" prefWidth="300.0">
          <children>
-            <ListView fx:id="ListTasks">
+            <ListView fx:id="ListViewTasks" prefHeight="340.0" prefWidth="280.0">
                <VBox.margin>
-                  <Insets right="10.0" />
+                  <Insets bottom="10.0" />
                </VBox.margin>
             </ListView>
-            <Button fx:id="BtnNewTask" mnemonicParsing="false" onAction="#NewTaskButtonPress" prefHeight="25.0" prefWidth="225.0" text="New Task">
+            <Button fx:id="BtnNewTask" mnemonicParsing="false" onAction="#NewTaskBtnPress" prefHeight="30.0" prefWidth="280.0" text="New Task">
                <VBox.margin>
-                  <Insets right="10.0" top="10.0" />
+                  <Insets bottom="10.0" />
                </VBox.margin>
             </Button>
-         </children>
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
-      </VBox>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="225.0">
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
-         <children>
-            <HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="215.0">
-               <children>
-                  <TextField fx:id="TxtFieldTaskName" onKeyReleased="#TxtFieldTaskNameUpdate" prefHeight="25.0" prefWidth="175.0">
-                     <HBox.margin>
-                        <Insets bottom="10.0" />
-                     </HBox.margin></TextField>
-                  <MenuButton fx:id="MenuBtnSettings" mnemonicParsing="false" text="...">
-                    <items>
-                      <MenuItem fx:id="DeleteButton" mnemonicParsing="false" onAction="#DeleteButtonPress" text="Delete Task" />
-                    </items>
-                  </MenuButton>
-               </children>
-            </HBox>
-            <TextArea fx:id="TxtAreaTaskDetails" onKeyReleased="#TxtAreaTaskDetailsUpdate" prefHeight="345.0" wrapText="true">
+            <Button fx:id="BtnEditTask" mnemonicParsing="false" onAction="#EditTaskBtnPress" prefHeight="30.0" prefWidth="280.0" text="Edit Task">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="BtnDeleteTask" mnemonicParsing="false" onAction="#DeleteTaskBtnPress" prefHeight="30.0" prefWidth="280.0" text="Delete Task">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
-            </TextArea>
+            </Button>
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </VBox>
    </children>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
-</HBox>
+</AnchorPane>
