--- a/src/Scenes/scene_edittask.fxml
+++ b/src/Scenes/scene_edittask.fxml
@@ -5,24 +5,33 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <AnchorPane prefHeight="480.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller_EditTaskScene">
    <children>
       <VBox prefHeight="480.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextField fx:id="TaskName">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </TextField>
-            <TextArea fx:id="TaskDescription" prefHeight="392.0" prefWidth="280.0">
+            <HBox prefHeight="58.0" prefWidth="300.0">
+               <children>
+                  <Button fx:id="BtnBack" alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="63.0" text="&lt;" textAlignment="JUSTIFY">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <TextField fx:id="TaskName" alignment="CENTER" prefHeight="26.0" prefWidth="306.0">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <TextArea fx:id="TaskDescription" prefHeight="397.0" prefWidth="280.0">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" />
                </VBox.margin>
             </TextArea>
-            <Button fx:id="BtnDelete" mnemonicParsing="false" prefHeight="32.0" prefWidth="289.0" style="-fx-background-color: red;" text="Button">
+            <Button fx:id="BtnDelete" mnemonicParsing="false" prefHeight="42.0" prefWidth="280.0" style="-fx-background-color: red;" text="Delete Task">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" />
                </VBox.margin>
