--- a/src/Scenes/scene_edittask.fxml
+++ b/src/Scenes/scene_edittask.fxml
@@ -14,19 +14,19 @@
          <children>
             <HBox prefHeight="58.0" prefWidth="300.0">
                <children>
-                  <Button fx:id="BtnBack" alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="63.0" text="&lt;" textAlignment="JUSTIFY">
+                  <Button fx:id="BtnBack" alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="59.0" text="Back" textAlignment="JUSTIFY">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </Button>
-                  <TextField fx:id="TaskName" alignment="CENTER" prefHeight="26.0" prefWidth="306.0">
+                  <TextField fx:id="TaskName" alignment="CENTER" prefHeight="35.0" prefWidth="206.0">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
-            <TextArea fx:id="TaskDescription" prefHeight="397.0" prefWidth="280.0">
+            <TextArea fx:id="TaskDescription" prefHeight="366.0" prefWidth="280.0">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" />
                </VBox.margin>
