--- a/src/Scenes/scene_edittask.fxml
+++ b/src/Scenes/scene_edittask.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="480.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="480.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="480.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox prefHeight="58.0" prefWidth="300.0">
                <children>
-                  <Button fx:id="BtnBack" alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="59.0" text="Back" textAlignment="JUSTIFY">
+                  <Button fx:id="BtnBack" alignment="CENTER" mnemonicParsing="false" onAction="#BtnBackPress" prefHeight="36.0" prefWidth="59.0" text="Back" textAlignment="JUSTIFY">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
