--- a/src/Scenes/scene_edittask.fxml
+++ b/src/Scenes/scene_edittask.fxml
@@ -14,7 +14,7 @@
          <children>
             <HBox prefHeight="58.0" prefWidth="300.0">
                <children>
-                  <Button fx:id="BtnBack" alignment="CENTER" mnemonicParsing="false" onAction="#BtnBackPress" prefHeight="36.0" prefWidth="59.0" text="Back" textAlignment="JUSTIFY">
+                  <Button fx:id="BtnBack" alignment="CENTER" mnemonicParsing="false" onAction="#returnToMainScene" prefHeight="36.0" prefWidth="59.0" text="Back" textAlignment="JUSTIFY">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
