--- a/src/Scenes/scene_newtask.fxml
+++ b/src/Scenes/scene_newtask.fxml
@@ -2,53 +2,86 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="265.0" prefWidth="294.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Controller_NewTaskScene">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.0" minWidth="10.0" prefWidth="102.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="278.0" minWidth="10.0" prefWidth="187.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="139.0" minHeight="10.0" prefHeight="132.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="83.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="TaskNameField" promptText="(Required)" GridPane.columnIndex="1">
-         <GridPane.margin>
-            <Insets left="10.0" right="10.0" />
-         </GridPane.margin>
-      </TextField>
-      <TextField fx:id="TaskDescriptionField" alignment="TOP_LEFT" prefHeight="114.0" prefWidth="167.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets left="10.0" right="10.0" />
-         </GridPane.margin>
-      </TextField>
-      <Label alignment="CENTER_RIGHT" text="Task Name" GridPane.halignment="RIGHT" />
-      <Label alignment="CENTER_RIGHT" text="Task Description" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-      </Label>
-      <HBox prefHeight="22.0" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <VBox prefHeight="480.0" prefWidth="300.0">
          <children>
-            <Button fx:id="AddTaskButton" defaultButton="true" mnemonicParsing="false" onAction="#AddTask" text="Add Task">
-               <HBox.margin>
-                  <Insets left="25.0" right="25.0" top="25.0" />
-               </HBox.margin>
-            </Button>
-            <Button fx:id="CancelButton" cancelButton="true" mnemonicParsing="false" onAction="#CloseStage" text="Cancel">
-               <HBox.margin>
-                  <Insets top="25.0" />
-               </HBox.margin>
+            <HBox prefHeight="30.0" prefWidth="280.0">
+               <children>
+                  <Button fx:id="BtnCancel" mnemonicParsing="false" onAction="#returnToMainScene" prefHeight="30.0" prefWidth="59.0" text="Cancel">
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <TextField fx:id="TxtFieldTaskName" prefHeight="30.0" prefWidth="211.0" promptText="Task Name (Required)">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+            <TextArea fx:id="TxtAreaTaskDescription" prefHeight="300.0" prefWidth="280.0" promptText="Task Description (Optional)">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </TextArea>
+            <DatePicker fx:id="DatePickerDueDate" prefHeight="30.0" prefWidth="280.0" promptText="Due Date (Optional)">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </DatePicker>
+            <HBox prefHeight="30.0" prefWidth="280.0">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+               <children>
+                  <ChoiceBox fx:id="ChoiceBoxHour" prefHeight="30.0" prefWidth="86.0">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                  </ChoiceBox>
+                  <Label text=":">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="ChoiceBoxMinute" prefHeight="30.0" prefWidth="86.0">
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </ChoiceBox>
+                  <ChoiceBox fx:id="ChoiceBoxAMPM" prefHeight="30.0" prefWidth="86.0">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </ChoiceBox>
+               </children>
+            </HBox>
+            <Button fx:id="BtnAddTask" defaultButton="true" mnemonicParsing="false" prefHeight="30.0" prefWidth="285.0" text="Add Task">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
             </Button>
          </children>
-      </HBox>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </VBox>
    </children>
-</GridPane>
+</AnchorPane>
