--- a/src/Scenes/scene_edittask.fxml
+++ b/src/Scenes/scene_edittask.fxml
@@ -26,11 +26,16 @@
                   </TextField>
                </children>
             </HBox>
-            <TextArea fx:id="TaskDescription" prefHeight="366.0" prefWidth="280.0">
+            <TextArea fx:id="TaskDescription" prefHeight="323.0" prefWidth="280.0">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" />
                </VBox.margin>
             </TextArea>
+            <Button fx:id="BtnSave" mnemonicParsing="false" onAction="#BtnSavePress" prefHeight="54.0" prefWidth="292.0" text="Save">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" />
+               </VBox.margin>
+            </Button>
             <Button fx:id="BtnDelete" mnemonicParsing="false" onAction="#BtnDeletePress" prefHeight="42.0" prefWidth="280.0" style="-fx-background-color: red;" text="Delete Task">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" />
